--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,1 +1,7 @@
-123
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: org.gjt.mm.mysql.Driver
+    url: jdbc:mysql://localhost:3306/springcloudlearn?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: 123456
