--- a/config-dev.yml
+++ b/config-dev.yml
@@ -5,3 +5,5 @@ spring:
     url: jdbc:mysql://localhost:3306/springcloudlearn?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: 123456
+
+myconfig: abc  
