--- a/cloudproviderpayment-dev.yml
+++ b/cloudproviderpayment-dev.yml
@@ -7,6 +7,11 @@ spring:
     url: jdbc:mysql://localhost:3306/springcloudlearn?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: 123456
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest 
 server:
   port: 8001
 mybatis:
