--- a/cloudorderpayment-dev.yml
+++ b/cloudorderpayment-dev.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: cloud-order-service
+  zipkin: 
+    base-url: http://localhost:9411
+  sleuth: 
+    sampler: 
+      probability: 1
   rabbitmq:
     host: localhost
     port: 5672
